--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "config"
   ],
   "peerDependencies": {
+    "@nfq/eslint-plugin": "^0.5.4",
     "babel-eslint": ">= 10",
     "eslint": "^7.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -23,7 +24,6 @@
     "eslint-plugin-better-styled-components": "^1.1.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-nfq": "^0.5.2",
     "eslint-plugin-no-unsanitized": "^3.1.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-perf-standard": "^1.0.3",
@@ -36,6 +36,7 @@
     "confusing-browser-globals": "^1.0.9"
   },
   "devDependencies": {
+    "@nfq/eslint-plugin": "^0.5.4",
     "babel-eslint": ">= 10",
     "eslint": "^7.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -43,7 +44,6 @@
     "eslint-plugin-better-styled-components": "^1.1.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-nfq": "^0.5.2",
     "eslint-plugin-no-unsanitized": "^3.1.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-perf-standard": "^1.0.3",
