--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nfq/eslint-config",
-  "version": "0.11.3-beta",
+  "version": "0.12.0",
   "engines": {
     "node": ">=8.10.0"
   },
@@ -18,39 +18,39 @@
   "peerDependencies": {
     "@nfq/eslint-plugin": "^0.5.5",
     "babel-eslint": ">= 10",
-    "eslint": "^7.0.0",
+    "eslint": "^7.5.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-array-func": "^3.1.6",
+    "eslint-plugin-array-func": "^3.1.7",
     "eslint-plugin-better-styled-components": "^1.1.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-no-unsanitized": "^3.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-no-unsanitized": "^3.1.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-perf-standard": "^1.0.3",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-sort-destructure-keys": "^1.3.4"
+    "eslint-plugin-sort-destructure-keys": "^1.3.5"
   },
   "dependencies": {
     "confusing-browser-globals": "^1.0.9"
   },
   "devDependencies": {
-    "@nfq/eslint-plugin": "^0.5.4",
+    "@nfq/eslint-plugin": "^0.5.5",
     "babel-eslint": ">= 10",
-    "eslint": "^7.0.0",
+    "eslint": "^7.5.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-array-func": "^3.1.6",
+    "eslint-plugin-array-func": "^3.1.7",
     "eslint-plugin-better-styled-components": "^1.1.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-no-unsanitized": "^3.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-no-unsanitized": "^3.1.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-perf-standard": "^1.0.3",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-sort-destructure-keys": "^1.3.4"
+    "eslint-plugin-sort-destructure-keys": "^1.3.5"
   },
   "author": ".NFQ | Christoph Kruppe",
   "license": "ISC"
