--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@nfq/eslint-config",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "engines": {
-    "node": ">=8.10.0"
+    "node": ">= 12.0.0"
   },
   "description": "Eslint configuration for all nfq projects",
   "main": "index.js",
@@ -16,39 +16,39 @@
     "config"
   ],
   "peerDependencies": {
-    "@nfq/eslint-plugin": "^0.5.5",
     "@babel/eslint-parser": ">= 7",
-    "eslint": "^7.5.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-array-func": "^3.1.7",
-    "eslint-plugin-better-styled-components": "^1.1.2",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-no-unsanitized": "^3.1.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-perf-standard": "^1.0.3",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-sort-destructure-keys": "^1.3.5"
+    "@nfq/eslint-plugin": ">= 0.5.5",
+    "eslint": ">= 7",
+    "eslint-import-resolver-alias": ">= 1",
+    "eslint-plugin-array-func": ">= 3",
+    "eslint-plugin-better-styled-components": ">= 1",
+    "eslint-plugin-import": ">= 2",
+    "eslint-plugin-jsx-a11y": ">= 6",
+    "eslint-plugin-no-unsanitized": ">= 3",
+    "eslint-plugin-node": ">= 11",
+    "eslint-plugin-perf-standard": ">= 1",
+    "eslint-plugin-promise": ">= 5",
+    "eslint-plugin-react": ">= 7",
+    "eslint-plugin-security": ">= 1",
+    "eslint-plugin-sort-destructure-keys": ">= 1"
   },
   "dependencies": {
     "confusing-browser-globals": "^1.0.10"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.12.1",
+    "@babel/eslint-parser": "7.14.5",
     "@nfq/eslint-plugin": "^0.5.5",
-    "eslint": "^7.5.0",
+    "eslint": "7.28.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-array-func": "^3.1.7",
     "eslint-plugin-better-styled-components": "^1.1.2",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "2.23.4",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-no-unsanitized": "^3.1.2",
+    "eslint-plugin-no-unsanitized": "3.1.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-perf-standard": "^1.0.3",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-promise": "5.1.0",
+    "eslint-plugin-react": "7.24.0",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-sort-destructure-keys": "^1.3.5"
   },
