--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nfq/eslint-config",
-  "version": "1.2.0",
+  "version": "1.2.8",
   "engines": {
     "node": ">= 12.0.0"
   },
@@ -17,8 +17,8 @@
   ],
   "peerDependencies": {
     "@babel/eslint-parser": ">= 7",
-    "@nfq/eslint-plugin": ">= 0.5.5",
-    "eslint": ">= 7",
+    "@nfq/eslint-plugin": ">= 0.6.0",
+    "eslint": ">= 8",
     "eslint-import-resolver-alias": ">= 1",
     "eslint-plugin-array-func": ">= 3",
     "eslint-plugin-better-styled-components": ">= 1",
@@ -29,6 +29,9 @@
     "eslint-plugin-perf-standard": ">= 1",
     "eslint-plugin-promise": ">= 5",
     "eslint-plugin-react": ">= 7",
+    "eslint-plugin-react-hooks": ">= 4",
+    "eslint-plugin-react-hooks-ssr": ">= 0.1.5",
+    "eslint-plugin-redos": ">= 4",
     "eslint-plugin-security": ">= 1",
     "eslint-plugin-sort-destructure-keys": ">= 1"
   },
@@ -36,19 +39,23 @@
     "confusing-browser-globals": "^1.0.10"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "7.14.5",
-    "@nfq/eslint-plugin": "^0.5.5",
-    "eslint": "7.28.0",
+    "@babel/core": "^7.15.8",
+    "@babel/eslint-parser": "^7.15.8",
+    "@nfq/eslint-plugin": "^0.6.0",
+    "eslint": "^8.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-array-func": "^3.1.7",
     "eslint-plugin-better-styled-components": "^1.1.2",
-    "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-no-unsanitized": "3.1.5",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-no-unsanitized": "^3.1.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-perf-standard": "^1.0.3",
-    "eslint-plugin-promise": "5.1.0",
-    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react-hooks-ssr": "^0.1.5",
+    "eslint-plugin-redos": "^4.3.0",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-sort-destructure-keys": "^1.3.5"
   },
