--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-array-func": "^3.1.7",
     "eslint-plugin-better-styled-components": "^1.1.2",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsdoc": "^39.3.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-no-unsanitized": "^3.1.5",
     "eslint-plugin-node": "^11.1.0",
