--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@nfq/eslint-config",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "engines": {
     "node": ">= 12.0.0"
   },
   "description": "Eslint configuration for all nfq projects",
   "main": "index.js",
   "scripts": {
-    "deploy": "standard-version && git push --follow-tags origin master",
+    "deploy": "standard-version && git push --follow-tags origin master && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
