--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   "peerDependencies": {
     "@babel/eslint-parser": ">= 7",
     "@nfq/eslint-plugin": ">= 0.6.0",
+    "@typescript-eslint/eslint-plugin": ">= 5",
+    "@typescript-eslint/parser": ">= 5",
     "eslint": ">= 8",
     "eslint-import-resolver-alias": ">= 1",
     "eslint-plugin-array-func": ">= 3",
     "eslint-plugin-better-styled-components": ">= 1",
     "eslint-plugin-import": ">= 2",
+    "eslint-plugin-jsdoc": ">= 39",
     "eslint-plugin-jsx-a11y": ">= 6",
     "eslint-plugin-no-unsanitized": ">= 3",
     "eslint-plugin-node": ">= 11",
@@ -37,29 +40,31 @@
     "eslint-plugin-sort-destructure-keys": ">= 1"
   },
   "dependencies": {
-    "confusing-browser-globals": "^1.0.10"
+    "confusing-browser-globals": "^1.0.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/eslint-parser": "^7.15.8",
+    "@babel/core": "^7.18.9",
+    "@babel/eslint-parser": "^7.18.9",
     "@nfq/eslint-plugin": "^0.6.0",
-    "eslint": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-array-func": "^3.1.7",
     "eslint-plugin-better-styled-components": "^1.1.2",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsdoc": "^39.3.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-no-unsanitized": "^3.1.5",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-no-unsanitized": "^4.0.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-perf-standard": "^1.0.3",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-hooks-ssr": "^0.1.5",
-    "eslint-plugin-redos": "^4.3.0",
-    "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-sort-destructure-keys": "^1.3.5"
+    "eslint-plugin-redos": "^4.4.1",
+    "eslint-plugin-security": "^1.5.0",
+    "eslint-plugin-sort-destructure-keys": "^1.4.0"
   },
   "author": ".NFQ | Christoph Kruppe",
   "license": "ISC"
