--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "config"
   ],
   "peerDependencies": {
+    "@babel/core": ">= 7",
     "@babel/eslint-parser": ">= 7",
     "@nfq/eslint-plugin": ">= 0.6.0",
     "@typescript-eslint/eslint-plugin": ">= 5",
@@ -26,12 +27,12 @@
     "eslint-plugin-array-func": ">= 3",
     "eslint-plugin-better-styled-components": ">= 1",
     "eslint-plugin-import": ">= 2",
-    "eslint-plugin-jsdoc": ">= 39",
+    "eslint-plugin-jsdoc": ">= 40",
     "eslint-plugin-jsx-a11y": ">= 6",
-    "eslint-plugin-no-unsanitized": ">= 3",
+    "eslint-plugin-no-unsanitized": ">= 4",
     "eslint-plugin-node": ">= 11",
     "eslint-plugin-perf-standard": ">= 1",
-    "eslint-plugin-promise": ">= 5",
+    "eslint-plugin-promise": ">= 6",
     "eslint-plugin-react": ">= 7",
     "eslint-plugin-react-hooks": ">= 4",
     "eslint-plugin-react-hooks-ssr": ">= 0.1.5",
@@ -43,28 +44,28 @@
     "confusing-browser-globals": "^1.0.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.9",
-    "@babel/eslint-parser": "^7.18.9",
+    "@babel/core": "^7.21.0",
+    "@babel/eslint-parser": "^7.19.1",
     "@nfq/eslint-plugin": "^0.6.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
-    "eslint": "^8.20.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "eslint": "^8.35.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-array-func": "^3.1.7",
+    "eslint-plugin-array-func": "^3.1.8",
     "eslint-plugin-better-styled-components": "^1.1.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.3",
-    "eslint-plugin-jsx-a11y": "^6.6.0",
-    "eslint-plugin-no-unsanitized": "^4.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsdoc": "^40.0.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-no-unsanitized": "^4.0.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-perf-standard": "^1.0.3",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-hooks-ssr": "^0.1.5",
-    "eslint-plugin-redos": "^4.4.1",
-    "eslint-plugin-security": "^1.5.0",
-    "eslint-plugin-sort-destructure-keys": "^1.4.0"
+    "eslint-plugin-redos": "4.4.5",
+    "eslint-plugin-security": "^1.7.1",
+    "eslint-plugin-sort-destructure-keys": "^1.5.0"
   },
   "author": ".NFQ | Christoph Kruppe",
   "license": "ISC"
