fix(Typescript): fix deprecated rules

--- a/package.json
+++ b/package.json
@@ -49,28 +49,28 @@
     "confusing-browser-globals": "^1.0.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.6",
-    "@babel/eslint-parser": "^7.23.3",
-    "@nfq/eslint-plugin": "^0.8.1",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "eslint": "^8.56.0",
+    "@babel/core": "^7.25.2",
+    "@babel/eslint-parser": "^7.25.1",
+    "@nfq/eslint-plugin": "^0.8.2",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "eslint": "^8.57.1",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-array-func": "^4.0.0",
     "eslint-plugin-better-styled-components": "^1.1.2",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsdoc": "^46.9.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-no-unsanitized": "^4.0.2",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jsdoc": "^50.3.1",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-no-unsanitized": "^4.1.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-perf-standard": "^1.0.3",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-promise": "^7.1.0",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-hooks-ssr": "^0.1.5",
-    "eslint-plugin-redos": "4.4.5",
-    "eslint-plugin-security": "^2.1.0",
-    "eslint-plugin-sort-destructure-keys": "^1.5.0",
+    "eslint-plugin-redos": "4.5.0-beta.6",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "standard-version": "^9.5.0"
   },
   "author": ".NFQ | Christoph Kruppe",
