feat(Stylistic): Add stylistic as migration for ts stylings

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/core": ">= 7",
     "@babel/eslint-parser": ">= 7",
     "@nfq/eslint-plugin": ">= 0.6.0",
+    "@stylistic/eslint-plugin-ts": ">= 2",
     "@typescript-eslint/eslint-plugin": ">= 6",
     "@typescript-eslint/parser": ">= 6",
     "eslint": ">= 8",
@@ -52,6 +53,7 @@
     "@babel/core": "^7.25.2",
     "@babel/eslint-parser": "^7.25.1",
     "@nfq/eslint-plugin": "^0.8.2",
+    "@stylistic/eslint-plugin-ts": "^2.9.0",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
     "eslint": "^8.57.1",
